--- a/style.css
+++ b/style.css
@@ -50,15 +50,6 @@ p {
     font-size: 16px;
 }
 
-.hero {
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
 .float-left {
     float: left;
     margin-right: 25px;
@@ -73,10 +64,12 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+    margin-top: 20px;
 }
 
 .benefits {
     margin-right: 20px;
+    margin-top: 20px;
     padding: 20px;
     clear: both;
     float: right;
